force-app/main/default/objects/Publications__c/Publications__c.object-meta.xml
<CustomObject>
    <label>Publications</label>
    <nameField>
        <label>Publications Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Publications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>