force-app/main/default/objects/Publications__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Enter the name of the account to which this Publication belogs. Select via lookup or create New</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Publications</relationshipName>
    <type>Lookup</type>
</CustomField>