force-app/main/default/objects/Publications__c/fields/Crypto_or_Web3_Desk_Chief_Name__c.field-meta.xml
<CustomField>
    <fullName>Crypto_or_Web3_Desk_Chief_Name__c</fullName>
    <inlineHelpText>Name of the Crypto/Web3 Chief Desk for this publication</inlineHelpText>
    <label>Crypto or Web3 Desk Chief Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>