force-app/main/default/objects/Publications__c/fields/DatePublished__c.field-meta.xml
<CustomField>
    <fullName>DatePublished__c</fullName>
    <inlineHelpText>Date when this article was published.</inlineHelpText>
    <label>Date Published</label>
    <type>Date</type>
</CustomField>