force-app/main/default/objects/Publications__c/fields/Editor_In_Chief_Name__c.field-meta.xml
<CustomField>
    <fullName>Editor_In_Chief_Name__c</fullName>
    <inlineHelpText>Name of the Editor in Chief for this publication</inlineHelpText>
    <label>Editor-In-Chief Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>