force-app/main/default/objects/Publications__c/fields/PublicationQuestion__c.field-meta.xml
<CustomField>
    <fullName>PublicationQuestion__c</fullName>
    <label>Publication Question</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>