force-app/main/default/objects/Publications__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <inlineHelpText>Type of Article that has been published.</inlineHelpText>
    <label>Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>