force-app/main/default/objects/Publications__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <inlineHelpText>URL of the article mentioned in the Article Name field above</inlineHelpText>
    <label>URL</label>
    <type>Url</type>
</CustomField>